# EyeStack

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  VersionUpdate.md  env.cmake.example
cmake/: CMakeLists.txt  DeployQt.cmake  ExportConfig.cmake.in  InstallConfig.cmake.in  InstallHelpers.cmake  TargetIspcSources.cmake  deps.cmake  package_readme.md.in
doc/: CMakeLists.txt  README.md
doc/Getting_Started/: .gitignore  CMakeLists.txt  README.md  env.cmake.example  version.hpp.in
doc/Getting_Started/algo/: Adder.cpp  CMakeLists.txt  Sobel.cpp
doc/Getting_Started/algo/inc/algo/: Sobel.hpp
doc/Getting_Started/app/: CMakeLists.txt  main.cpp  main.hpp
doc/Getting_Started/doc/: CMakeLists.txt
doc/Getting_Started/exp/: CMakeLists.txt  main.cpp
doc/Getting_Started/test/: CMakeLists.txt
doc/guide/: README.md  app_model.md  bgtasker.md  configurer.md  logsys.md  main_window.md  mvc_com.md  notifier.md  services.md  workctrl.md
doc/manual/: README.md  cmake_deps.md  safe_code.md  specification.md  structure.md  tempgen.md
doc/tutorial/: README.md  Step1-prepare.md  Step5-elease.md  add_sobel.md  app_develop.md  experiment.md
module/: CMakeLists.txt
module/Asset/: Asset.cpp  CMakeLists.txt  asset.qrc
module/Asset/icon/fa/: change_color.py
module/Asset/inc/Eyestack/: Asset.hpp
module/Base/: Base.cpp  CMakeLists.txt  Logsys.cpp  Profiler.cpp  util.cpp
module/Base/inc/Eyestack/: Base.hpp
module/Base/inc/Eyestack/Base/: Logsys.hpp  Profiler.hpp  exc.hpp  util.hpp
module/Com_DLP/: CMakeLists.txt  DLP.cpp  DlpcConfigui.cpp  DlpcWrapper.cpp  cypress_i2c.cpp  dlpc347x.cpp  dlpc347x_internal_patterns.cpp  dlpc347x_samples.cpp  dlpc_common.c  dlpc_common.cpp  dlpconfigui.cpp  dlpconfigui.h  dlpconfigui.ui  ginit.cpp
module/Com_DLP/inc/Eyestack/Com_DLP/: DLP.hpp  DlpcConfigui.h  DlpcWrapper.hpp  cypress_i2c.h  dlpc347x.hpp  dlpc347x_internal_patterns.hpp  dlpc347x_samples.hpp  dlpc_common.hpp  dlpc_common_private.h  dlpconfigui.h  ginit.hpp
module/Com_DLP/official/: CMakeLists.txt
module/Com_DLP/official/Includes/: CyUSBSerial.h
module/Com_DLP/official/Libraries/: cyusbserial.lib
module/Com_MVS/: CMakeLists.txt  MvsCamera.cpp  MvsCameraConfigUi.cpp  MvsCameraConfigUi.ui  MvsCameraPropertyDialog.cpp  MvsCameraPropertyDialog.ui  MvsCameraRunningUi.ui  MvsCameraWrapper.cpp  ginit.cpp
module/Com_MVS/inc/Eyestack/Com_MVS/: MvsCamera.hpp  MvsCameraConfigUi.hpp  MvsCameraPropertyDialog.hpp  MvsCameraWrapper.hpp  ginit.hpp
module/Com_MVS/official/: .gitattributes  CMakeLists.txt  CMakeLists.txt.ZciqCw
module/Com_MVS/official/Libraries/win32/: MvCameraControl.lib
module/Com_MVS/official/Libraries/win32/C++ Builder/: MvCameraControlBC.lib
module/Com_MVS/official/Libraries/win64/: MvCameraControl.lib
module/Com_MVS/official/Runtime/Win32_i86/: Microsoft.VC90.DebugCRT.manifest  MvDSS.ax  MvDSS2.ax  MvProducerGEV.cti  MvProducerU3V.cti
module/Com_MVS/official/Runtime/Win64_x64/: Microsoft.VC90.CRT.manifest  Microsoft.VC90.DebugCRT.manifest  MvDSS.ax  MvDSS2.ax  MvProducerGEV.cti  MvProducerU3V.cti
module/Design/: AboutEyestack.cpp  CMakeLists.txt  ImageBench.cpp  ImageLabel.cpp  ListScroll.cpp  Monitor.cpp  Paramgr.cpp  Progressor.cpp  QuadrangleSelector.cpp  RectangleSelector.cpp  StyleWindow.cpp  main.cpp
module/Design/inc/Eyestack/Design/: AboutEyestack.hpp  ImageBench.hpp  ImageLabel.hpp  ListScroll.hpp  Monitor.hpp  Paramgr.hpp  Progressor.hpp  QuadrangleSelector.hpp  RectangleSelector.hpp  StyleWindow.hpp
module/Framework/: Application.cpp  Bgtasker.cpp  CMakeLists.txt  Configurer.cpp  MainWindow.cpp  Notifier.cpp  Workctrl.cpp
module/Framework/inc/Eyestack/: Framework.hpp
module/Framework/inc/Eyestack/Framework/: Application.hpp  Bgtasker.hpp  Configurer.hpp  MainWindow.hpp  Notifier.hpp  Workctrl.hpp
module/Gencom/: BackgroundSubtractor.cpp  BackgroundSubtractorConfigUi.ui  CMakeLists.txt  Gencom.cpp  ImageBench.cpp  Monitor.cpp  Paramgr.cpp  VideoCapture.cpp  WarpPerspective.cpp
module/Gencom/inc/Eyestack/: Gencom.hpp
module/Gencom/inc/Eyestack/Gencom/: BackgroundSubtractor.hpp  ImageBench.hpp  Monitor.hpp  Paramgr.hpp  VideoCapture.hpp  WarpPerspective.hpp  base.hpp
module/pch/: CMakeLists.txt  pch.cpp  version.hpp.in
module/pch/inc/Eyestack/: pch.hpp
sample/: CMakeLists.txt
sample/Basic/: Basic.cpp  Basic.hpp  CMakeLists.txt
sample/Custom_UI/: CMakeLists.txt  Custom_UI.cpp  Custom_UI.hpp
template/: CMakeLists.txt  tempgen.py.in
template/Close_Source/: README.md
template/Close_Source/Algo/: .gitignore  CMakeLists.txt.mako  Config.cmake.in  README.md  deps.cmake  env.cmake.example.mako
template/Close_Source/Algo/algo/: Algo.cpp.mako.py  Algo.cpp.makoignore  CMakeLists.txt.mako  V1.cpp.mako  V1.hpp.mako
template/Close_Source/Algo/algo/inc/: Algo.hpp.mako.py  Algo.hpp.makoignore
template/Close_Source/Algo/doc/: CMakeLists.txt  index.md
template/Close_Source/Algo/exp/: CMakeLists.txt.mako  main.cpp
template/Close_Source/App/: CMakeLists.txt.mako  README.md  deps.cmake.mako  env.cmake.example.mako
template/Close_Source/App/app/: CMakeLists.txt.mako  Worker.cpp  Worker.hpp.mako  main.cpp.mako
template/Close_Source/App/doc/: CMakeLists.txt
template/Close_Source/App/test/: CMakeLists.txt  test_1.cpp.mako
template/Traditional/: CMakeLists.txt  env.cmake.example.mako
template/Traditional/algo/: Adder.cpp  CMakeLists.txt
template/Traditional/algo/inc/: algo.hpp
template/Traditional/algo/inc/algo/: Adder.hpp
template/Traditional/app/: main.cpp  main.hpp
template/Traditional/doc/: CMakeLists.txt  index.md
template/Traditional/exp/: main.cpp
template/Traditional/test/: test_1.cpp
test/: CMakeLists.txt
test/Base/: CMakeLists.txt  Test_Base.cpp
test/Com_MVS/: CMakeLists.txt  Test_Com_MVS.cpp  Test_MvsCameraConfigUi.cpp
test/Design/: CMakeLists.txt  Test_Design.cpp  Test_Design.hpp
test/Framework/: CMakeLists.txt  Test_Application.cpp  Test_Application.hpp  Test_Configurer.cpp  Test_MainWindow.cpp  Test_Workctrl.cpp  Test_Workctrl.hpp
test/Gencom/: CMakeLists.txt
